--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: JH-Lee Hub
+date: 2022-04-27
 author: JHLee
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
