--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
-title: "JH-Lee Hub"
+---
+title: "JHLee Hub"
 date: 2022-04-27
+---
 author: JHLee
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
